[gd_scene load_steps=17 format=3 uid="uid://dqkrjn0mak6lh"]

[ext_resource type="Theme" uid="uid://dwqhs78076qut" path="res://addons/agent/ui/resource/AgentTheme.tres" id="1_k8r8m"]
[ext_resource type="Script" uid="uid://c0gayflg4ovas" path="res://addons/agent/ui/chat/input_container.gd" id="1_xi1dg"]
[ext_resource type="PackedScene" uid="uid://cr0rgr6uojjsh" path="res://addons/agent/ui/customdropdown/old/custom_dropdown.tscn" id="2_c3kby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi1dg"]
bg_color = Color(0.04303915, 0.043039158, 0.043039113, 0.38039216)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ot7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5v6i3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cpi8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elhta"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vh1vc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k8r8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3kby"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sf386"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xi1dg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0yucd"]
content_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_model_button"]

[sub_resource type="LabelSettings" id="LabelSettings_gy7k7"]
font_color = Color(0.46666667, 0.46666667, 0.46666667, 1)

[node name="InputContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k8r8m")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_xi1dg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InputMenuList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xi1dg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ot7o")
allow_search = false
auto_height = true

[node name="ReferenceList" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfigModelTip" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ConfigModelTip"]
layout_mode = 2
text = "目前没有任何已经启用的模型，
需要在设置中配置后才能使用"
horizontal_alignment = 1

[node name="ConfigModelButton" type="Button" parent="VBoxContainer/ConfigModelTip"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "目前没有任何已经启用的模型，
需要在设置中配置后才能使用"
mouse_default_cursor_shape = 2
theme_type_variation = &"PrimaryButton"
text = "配置模型"

[node name="InputBox" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UserInput" type="TextEdit" parent="VBoxContainer/InputBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_5v6i3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cpi8b")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_elhta")
placeholder_text = "输入问题，或拖拽添加引用。"
drag_and_drop_selection_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true
caret_multiple = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InputBox"]
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InputBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="RoleButton" type="OptionButton" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "选择角色"
theme_override_styles/normal = SubResource("StyleBoxFlat_vh1vc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k8r8m")

[node name="CustomDropdown" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer" instance=ExtResource("2_c3kby")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(96, 30)
layout_mode = 2

[node name="InputModeSelect" type="OptionButton" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_c3kby")
theme_override_styles/hover = SubResource("StyleBoxFlat_sf386")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xi1dg")
selected = 0
item_count = 2
popup/item_0/text = "Agent"
popup/item_0/id = 0
popup/item_1/text = "Ask"
popup/item_1/id = 1

[node name="ModelButton" type="OptionButton" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "选择AI模型"
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_0yucd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_model_button")
flat = true
fit_to_longest_item = false

[node name="UseThinking" type="CheckButton" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "是否启用思考"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_xi1dg")
button_pressed = true
text = "思考"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/InputBox/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 6

[node name="UsageLabel" type="Label" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
label_settings = SubResource("LabelSettings_gy7k7")

[node name="ClearButton" type="Button" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "清空输入内容"
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.46666667, 0.46666667, 0.46666667, 1)
theme_override_font_sizes/font_size = 14
text = "清空"
flat = true

[node name="SendButton" type="Button" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "发送"
mouse_default_cursor_shape = 2
theme_type_variation = &"PrimaryButton"
theme_override_font_sizes/font_size = 14
text = "发送"

[node name="StopButton" type="Button" parent="VBoxContainer/InputBox/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "停止"
mouse_default_cursor_shape = 2
theme_type_variation = &"DangerButton"
theme_override_font_sizes/font_size = 14
text = "停止"

[connection signal="gui_input" from="VBoxContainer/InputBox/UserInput" to="." method="_on_user_input_gui_input"]
[connection signal="item_selected" from="VBoxContainer/InputBox/HBoxContainer/HBoxContainer/InputModeSelect" to="." method="_on_input_mode_select_item_selected"]
